...
                    )
                },
                navigationIcon = {
                    IconButton(onClick = onBack) {
                        Icon(
                            Icons.AutoMirrored.Filled.ArrowBack,
                            contentDescription = "Atrás",
                            tint = Color.Black
                        )
                    }
                },
                colors = TopAppBarDefaults.topAppBarColors(
                    containerColor = Color(0xFFEDEDED)
...
                    colors = CardDefaults.cardColors(containerColor = Color(0xFFEDEDED))
                ) {
                    val context = LocalContext.current
                    val imageLoader = customImageLoader(context)
                    AsyncImage(
                        model = artist.image,
                        contentDescription = "Foto del artista",
                        modifier = Modifier
                            .fillMaxSize()
                            .padding(8.dp),
                        contentScale = ContentScale.Crop,
                        imageLoader = imageLoader,
                        placeholder = painterResource(id = android.R.drawable.ic_menu_report_image),
...
