...
        ) {
            MenuButton(
                text = "Catálogo de álbumes",
                onClick = { navController.navigate("albums") }
            )
            MenuButton(
                text = "Listado de artistas",
                onClick = { navController.navigate("artists") }
            )
            MenuButton(
                text = "Listado de coleccionistas",
                onClick = { navController.navigate("collectors") }
            )
...
